--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
   <body>
     <!--Шапка проекта-->
     <header>
-      <a href="#" lang="en">Web Studio</a>
       <nav>
+        <a href="#" lang="en">Web Studio</a>
         <ul>
           <li>
             <a href="#">Студия</a>
@@ -23,121 +23,104 @@
           </li>
         </ul>
       </nav>
-      <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-      <a href="tel:+380961111111">+38 096 111 11 11</a>
+      <ul>
+        <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+        <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+      </ul>
     </header>
     <main>
       <!--Шапка-герой-->
-      <div>
-        <section>
-          <img src="./images/Bg.jpg" alt="Фоновое изображение" width="400" />
-          <h1>Эффективные решения <br />для вашего бизнеса</h1>
-          <button type="button">Заказать услугу</button>
-        </section>
-      </div>
+      <section>
+        <h1>Эффективные решения <br />для вашего бизнеса</h1>
+        <button type="button">Заказать услугу</button>
+      </section>
       <!--Особенности работы-->
-      <div>
-        <section>
-          <h2>Особенности</h2>
-          <ul>
-            <li>
-              <h3>Внимание к деталям</h3>
-              <p>
-                Идейные соображения, а также начало повседневной работы по
-                формированию позиции.
-              </p>
-            </li>
-            <li>
-              <h3>Пунктуальность</h3>
-              <p>
-                Задача организации, в особенности же рамки и место обучения
-                кадров влечет за собой.
-              </p>
-            </li>
-            <li>
-              <h3>Планирование</h3>
-              <p>
-                Равным образом консультация с широким активом в значительной
-                степени обуславливает.
-              </p>
-            </li>
-            <li>
-              <h3>Современные технологии</h3>
-              <p>
-                Значимость этих проблем настолько очевидна, что реализация
-                плановых заданий.
-              </p>
-            </li>
-          </ul>
-        </section>
-      </div>
+      <section>
+        <h2>Особенности</h2>
+        <ul>
+          <li>
+            <h3>Внимание к деталям</h3>
+            <p>
+              Идейные соображения, а также начало повседневной работы по
+              формированию позиции.
+            </p>
+          </li>
+          <li>
+            <h3>Пунктуальность</h3>
+            <p>
+              Задача организации, в особенности же рамки и место обучения кадров
+              влечет за собой.
+            </p>
+          </li>
+          <li>
+            <h3>Планирование</h3>
+            <p>
+              Равным образом консультация с широким активом в значительной
+              степени обуславливает.
+            </p>
+          </li>
+          <li>
+            <h3>Современные технологии</h3>
+            <p>
+              Значимость этих проблем настолько очевидна, что реализация
+              плановых заданий.
+            </p>
+          </li>
+        </ul>
+      </section>
       <!--Услуги-->
-      <div>
-        <section>
-          <h2 hidden>Чем мы занимаемся</h2>
-          <ul>
-            <li>
-              <a href="#"
-                ><img src="./images/box-1.jpg" alt="Кодинг" width="370"
-              /></a>
-            </li>
-            <li>
-              <a href="#"
-                ><img src="./images/box-2.jpg" alt="Натив" width="370"
-              /></a>
-            </li>
-            <li>
-              <a href="#"
-                ><img src="./images/box-3.jpg" alt="Дизайн" width="370"
-              /></a>
-            </li>
-          </ul>
-        </section>
-      </div>
+      <section>
+        <h2 hidden>Чем мы занимаемся</h2>
+        <ul>
+          <li>
+            <img src="./images/box-1.jpg" alt="Кодинг" width="370" />
+          </li>
+          <li>
+            <img src="./images/box-2.jpg" alt="Натив" width="370" />
+          </li>
+          <li>
+            <img src="./images/box-3.jpg" alt="Дизайн" width="370" />
+          </li>
+        </ul>
+      </section>
       <!--Команда-->
-      <div>
-        <section>
-          <h2>Наша команда</h2>
-          <ul>
-            <li>
-              <a href="#">
-                <img
-                  src="./images/img-3.jpg"
-                  alt="Игорь Демьяненко"
-                  width="270"
-                />
-                <h3>Игорь Демьяненко</h3>
-                <p lang="en">Product Designer</p>
-              </a>
-            </li>
-            <li>
-              <a href="#">
-                <img src="./images/img-2.jpg" alt="Ольга Репина" width="270" />
-                <h3>Ольга Репина</h3>
-                <p lang="en">Frontend Developer</p>
-              </a>
-            </li>
-            <li>
-              <a href="#">
-                <img
-                  src="./images/img-1.jpg"
-                  alt="Николай Тарасов"
-                  width="270"
-                />
-                <h3>Николай Тарасов</h3>
-                <p lang="en">Marketing</p>
-              </a>
-            </li>
-            <li>
-              <a href="#">
-                <img src="./images/img.jpg" alt="Михаил Ермаков" width="270" />
-                <h3>Михаил Ермаков</h3>
-                <p lang="en">UI Designer</p>
-              </a>
-            </li>
-          </ul>
-        </section>
-      </div>
+      <section>
+        <h2>Наша команда</h2>
+        <ul>
+          <li>
+            <a href="#">
+              <img
+                src="./images/img-3.jpg"
+                alt="Игорь Демьяненко"
+                width="270"
+              />
+              <h3>Игорь Демьяненко</h3>
+              <p lang="en">Product Designer</p>
+            </a>
+          </li>
+          <li>
+            <a href="#">
+              <img src="./images/img-2.jpg" alt="Ольга Репина" width="270" />
+              <h3>Ольга Репина</h3>
+              <p lang="en">Frontend Developer</p>
+            </a>
+          </li>
+          <li>
+            <a href="#">
+              <img src="./images/img-1.jpg" alt="Николай Тарасов" width="270" />
+              <h3>Николай Тарасов</h3>
+              <p lang="en">Marketing</p>
+            </a>
+          </li>
+          <li>
+            <a href="#">
+              <img src="./images/img.jpg" alt="Михаил Ермаков" width="270" />
+              <h3>Михаил Ермаков</h3>
+              <p lang="en">UI Designer</p>
+            </a>
+          </li>
+        </ul>
+      </section>
     </main>
     <!--Подвал-->
     <footer>
