--- a/index.html
+++ b/index.html
@@ -88,36 +88,24 @@
         <h2>Наша команда</h2>
         <ul>
           <li>
-            <a href="#">
-              <img
-                src="./images/img-3.jpg"
-                alt="Игорь Демьяненко"
-                width="270"
-              />
-              <h3>Игорь Демьяненко</h3>
-              <p lang="en">Product Designer</p>
-            </a>
+            <img src="./images/img-3.jpg" alt="Игорь Демьяненко" width="270" />
+            <h3>Игорь Демьяненко</h3>
+            <p lang="en">Product Designer</p>
           </li>
           <li>
-            <a href="#">
-              <img src="./images/img-2.jpg" alt="Ольга Репина" width="270" />
-              <h3>Ольга Репина</h3>
-              <p lang="en">Frontend Developer</p>
-            </a>
+            <img src="./images/img-2.jpg" alt="Ольга Репина" width="270" />
+            <h3>Ольга Репина</h3>
+            <p lang="en">Frontend Developer</p>
           </li>
           <li>
-            <a href="#">
-              <img src="./images/img-1.jpg" alt="Николай Тарасов" width="270" />
-              <h3>Николай Тарасов</h3>
-              <p lang="en">Marketing</p>
-            </a>
+            <img src="./images/img-1.jpg" alt="Николай Тарасов" width="270" />
+            <h3>Николай Тарасов</h3>
+            <p lang="en">Marketing</p>
           </li>
           <li>
-            <a href="#">
-              <img src="./images/img.jpg" alt="Михаил Ермаков" width="270" />
-              <h3>Михаил Ермаков</h3>
-              <p lang="en">UI Designer</p>
-            </a>
+            <img src="./images/img.jpg" alt="Михаил Ермаков" width="270" />
+            <h3>Михаил Ермаков</h3>
+            <p lang="en">UI Designer</p>
           </li>
         </ul>
       </section>
